2008-04-25  Thomas Heller  <theller@python.net>

	* The __repr__ of VARIANT changed again to make it a little bit shorter.

	VARIANT instances of VT_BREF are NOT unpacked when the .value
	attribute as accessed. The value instead can be got or set by
	indexing, so the api is the same as for pointer instances:

	  print byref_var[0]
	  byref_var[0] = value


2008-04-17  Thomas Heller  <theller@python.net>

	* More changes merged from upstream svn 26400, add support for
	implementing (non-dual) dispinterfaces (work in progress).

	* Merge in a lot of changes from the private upstream repository
	26394; mainly much better support for implementing comtypes
	servers.

2008-04-09  Thomas Heller  <theller@python.net>

	* Bump version number to 0.4.3a

	* Released version comtypes 0.4.2.

	* comtypes.util: New module, containing the byref_at() and
	cast_field() helper functions.

2008-04-07  Thomas Heller  <theller@python.net>

	* Fix the codegenerator to handle all kinds of IEnumXXX::Next
	method signatures; the second and third parameters may be [out] or
	[in, out].

2008-03-07  Thomas Heller  <theller@python.net>

	* Implemented support for SAFEARRAYs containing com interface
	pointers.

2008-03-04  Thomas Heller  <theller@python.net>

	* Add comtypes.client.gen_dir to comtypes.gen.__path__ so that the
	codegenerator can import its generated module(s).

2008-02-08  Thomas Heller  <theller@python.net>

	* Hacked support for 'open array' [out] parameters in COM methods.
	These are arrays that have both size_is() and length_is() in IDL.
	See the comments in comtypes\tools\codegenerator.py, search for
	'OPENARRAY'.

2008-02-06  Thomas Heller  <theller@python.net>

	* The badly named comtypes.client.wrap function was renamed into
	comtypes.client.GetBestInterface.  For backwards compatibility the
	old name stays as an alias.
	
	* Replaced the comtypes.messageloop.add_filter(filter) function
	with comtypes-messageloop.insert_filter(index, filter).  This